syntax = "proto3";

option java_multiple_files = true;
option java_package = "library.enrichment.gateways.grpc";
option java_outer_classname = "BookResponseProto";

message BookResponse {
}

